# smoltolk

./: Cargo.toml  todo.txt
src/: app.rs  chat.rs  gemini.rs  lib.rs  main.rs  message.rs
