[package]
name = "smoltolk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
crossterm = { version = "0.29.0", features = ["event-stream"] }
lazy_static = "1.5.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt", "time"] }
tokio-stream = "0.1.17"
